core/jquery dependency has been added

--- a/sass_theme_msd.libraries.yml
+++ b/sass_theme_msd.libraries.yml
@@ -3,6 +3,8 @@ global:
   js:
     js/copy-it.js: {}
     js/local-menu.js: {}
+  dependencies:
+    - core/jquery
   css:
     base:
       css/style.css: {}
